--- a/Micro-services/auths-service/Dockerfile
+++ b/Micro-services/auths-service/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY package.json ./
 RUN npm ci    
 COPY . .
+RUN npx prisma generate
 RUN npm run build
 
 # production stage
