--- a/Micro-services/users-service/Dockerfile
+++ b/Micro-services/users-service/Dockerfile
@@ -5,7 +5,9 @@ WORKDIR /usr/src/app
 COPY package.json ./
 RUN npm ci
 COPY . .
+RUN npx prisma generate
 RUN npm run build
+
 
 # production stage
 FROM base AS production 
