--- a/Micro-services/flights-service/Dockerfile
+++ b/Micro-services/flights-service/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18-alpine AS development
 
 WORKDIR /usr/src/app
 COPY package.json ./
-RUN npm ci
+RUN npm install
 COPY . .
 RUN npm run build
 
