--- a/api-gateway-service/Dockerfile
+++ b/api-gateway-service/Dockerfile
@@ -11,7 +11,8 @@ RUN npm run build
 FROM base AS production
 
 WORKDIR /usr/src/app
-
+COPY package.json ./
+RUN npm ci --prod 
 COPY --from=development /usr/src/app/dist ./dist
 
 CMD ["node", "./dist/main.js"]
