--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       target: development
     ports:
       - "8000:8000"
-    restart: on-failure
+    restart: always
     depends_on:
       - rabbitmq
     networks:
@@ -26,7 +26,7 @@ services:
       context: ./Micro-services/auths-service
       target: development
     ports:
-      - "8001:8000"
+      - "8001:8001"
     restart: on-failure
     depends_on:
       - postgres-db
@@ -53,7 +53,7 @@ services:
       context: ./Micro-services/users-service
       target: development
     ports:
-      - "8002:8000"
+      - "8002:8002"
     restart: on-failure
     depends_on:
       - postgres-db
@@ -81,7 +81,7 @@ services:
       context: ./Micro-services/hotels-service
       target: development
     ports:
-      - "8003:8000"
+      - "8003:8003"
     restart: on-failure
     depends_on:
       - mongo-db
@@ -104,7 +104,7 @@ services:
       context: ./Micro-services/flights-service
       target: development
     ports:
-      - "8004:8000"
+      - "8004:8003"
     restart: on-failure
     depends_on:
       - user-service
