--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,10 @@ services:
     ports:
       - "8000:8000"
     restart: always
+    command: >
+        sh -c "
+        npm start
+        "
     depends_on:
       - rabbitmq
     networks:
