--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -165,6 +165,9 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: "guest"
       RABBITMQ_DEFAULT_PASS: "guest"
+    expose:
+      - "5672"
+      - "15672"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq  # Volume for RabbitMQ data
       - ./rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
