--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -162,6 +162,7 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    restart: always
     environment:
       RABBITMQ_DEFAULT_USER: "guest"
       RABBITMQ_DEFAULT_PASS: "guest"
